syntax = "proto3";

package example;


import "google/api/annotations.proto";
   
service YourService {
      rpc Echo(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
  
}

message StringMessage {
  string value = 1;
}
